:bug: 棋譜の overflow

--- a/src/components/shogi/BoardArea.scss
+++ b/src/components/shogi/BoardArea.scss
@@ -1,4 +1,5 @@
 .BoardArea {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
+  overflow: hidden;
 }
